--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+bcrypt==3.1.4
 blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
 gunicorn==20.1.0
 idna==3.6
 itsdangerous==2.0.1
@@ -15,3 +17,4 @@ Flask-SQLAlchemy==2.4.1
 psycopg2-binary==2.8.4
 SQLAlchemy==1.3.3
 Flask-Cors==4.0.1
+WTForms==2.2.1
