--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.7
 Flask==1.0.2
 Flask-Bcrypt==0.7.1
 Flask-WTF==0.14.2
+Flask-Mail==0.9.1
 gunicorn==20.1.0
 idna==3.6
 itsdangerous==2.0.1
